12/17/12 rewrite layout code for slope-intercept equations so that it adds, rather than deletes, nodes
# 0.00.42 (70534) Nov 20, 2012
11/20/12 dev version with smaller subscripts
11/20/12 subscripts are too small with <small> tag, revert to <font size='-1'>
11/20/12 use <small> instead of <font size='3'> for subscripts, because <font> is deprecated in HTML4.01 and unsupported in HTML5
11/20/12 fill in {0} in "{0}=# (slope undefined)" with the translated symbol for "x"
11/20/12 move symbol subscripting (x1,y1,...) into code, make subscripts smaller
# 0.00.41 (70308) Nov 14, 2012
11/14/12 fix: represent y=x and y=-x in slope-intercept form in "Point-Slope" tab
11/14/12 change request: "Save line" -> "Save Line", "Erase lines" -> "Erase Lines"
# 0.00.40 (70166) Nov 10, 2012
11/10/12 dev version for interviews on first 3 tabs
11/10/12 temporarily hide "Line Game" tab
11/10/12 fix: incorrect order of range params in PointSlopeEquationNode constructor was allowing out-of-range values in spinners
11/7/12 make "Line Game" tab accessible
# 0.00.39 (70077) Nov 7, 2012
11/7/12 fix: pad equation control panel width a little bit, so that undefined-slope indicator doesn't make the control panel resize
11/7/12 use DefaultDecimalFormat("0") in DynamicValueNode, instead of doing double-to-int conversion
11/7/12 promote SlopeUndefinedNode to top level, because it's not used in all equations
11/7/12 simplify i18n for slopeUndefined key
11/7/12 remove EquationControls.xPadding param, because interactive Slope equation no longer has a dynamic width
11/7/12 use a constant size for the unsimplified rise & run boxes in the Slope equation
11/6/12 adjust y-spacing for version of Slope interactive equation that puts unsimplified value on a separate line
# 0.00.38 (70043) Nov 6, 2012
11/6/12 make slope color look the same everywhere: adjust slope color, change slope tool node so that it doesn't add transparency
# 0.00.37 (70041) Nov 6, 2012